crates/kata-core/tests/snapshots/header_fixtures__bad_bad_alias.snap
---
source: crates/kata-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "invalid alias `Bad/Alias`",
        fix: Some(
            "aliases match ^[a-z0-9][a-z0-9-]*$, the same shape as a folder/name segment",
        ),
        line: 5,
        col: 3,
        len: 9,
    },
]
