crates/kata-core/tests/snapshots/header_fixtures__bad_crlf.snap
---
source: crates/kata-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "CRLF line endings in header",
        fix: Some(
            "convert to LF",
        ),
        line: 1,
        col: 1,
        len: 1,
    },
]
