crates/kata-core/tests/snapshots/header_fixtures__bad_reserved_arg_name.snap
---
source: crates/kata-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "invalid arg name `path`: this name is reserved because it would shadow a shell/env variable",
        fix: None,
        line: 6,
        col: 5,
        len: 4,
    },
]
