crates/kata-core/tests/snapshots/header_fixtures__bad_tabs.snap
---
source: crates/kata-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "tabs are not allowed in the header",
        fix: Some(
            "use spaces",
        ),
        line: 4,
        col: 8,
        len: 1,
    },
]
